fixing issue with word overlap in Dutch

--- a/wifi4eu-public-portal/wifi4eu-public-portal-web/src/main/angular/src/styles.scss
+++ b/wifi4eu-public-portal/wifi4eu-public-portal-web/src/main/angular/src/styles.scss
@@ -258,7 +258,7 @@ body {
 .apply {
 
   font-family: Verdana;
-  font-size: 52px;
+  font-size: 45px;
   font-weight: bold;
   line-height: 1.15;
   color: $darkish-blue;
